--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Shu Ding",
   "license": "MIT",
   "dependencies": {
+    "@lottiefiles/lottie-player": "^1.1.1",
     "next": "^10.0.8-canary.9",
     "nextra": "^0.4.1",
     "nextra-theme-docs": "^1.1.2",
